syntax = "proto3";

option csharp_namespace = "CenterWorker";

import "google/protobuf/wrappers.proto";

package greet;

service CenterEndpoint {
  rpc AddServer (AddServerRequest) returns (AddServerResponse);
  rpc ListServers (ListServerRequest) returns (stream ListServerResponse);
}

message AddServerRequest {
  string serverIp = 1;
  string serverName = 2;
  google.protobuf.Int32Value allowedLevel = 3;
  int32 maxPlayers = 4;
}

message AddServerResponse {
  bool registered = 1;
}

message ListServerRequest {
 string t = 1;
}

message ListServerResponse {
	string serverId = 1;
	string serverIp = 2;
	google.protobuf.Int32Value allowedLevel = 4;
	int32 PlayersOnline = 5;
	int32 serverState = 3;
}
